# Rust_Final_Project

./: .gitignore  Cargo.toml  README.md  命令.md
examples/knowledge_base/.rns/: history.json
examples/knowledge_base/algorithm/: dynamic_programming.md  graph.md  greedy.md
examples/knowledge_base/database/: sql_basic.txt  transaction.txt
examples/knowledge_base/rust/: borrowing.md  ownership.md  result_error.md  trait.md
src/: app.rs  cli.rs  compare.rs  direct_search.rs  document.rs  error.rs  explain.rs  filter.rs  history.rs  index.rs  lib.rs  main.rs  markdown.rs  query.rs  ranker.rs  search.rs  snippet.rs  storage.rs  tokenizer.rs
tests/: cli_tests.rs  index_tests.rs  search_tests.rs  storage_tests.rs  tokenizer_tests.rs
