[package]
name = "rust-note-search"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.15"
